--- a/local.yml
+++ b/local.yml
@@ -14,13 +14,14 @@ services:
     depends_on:
       - postgres
       - redis
+      - mailhog
     volumes:
       - .:/app:z
     env_file:
       - ./.envs/.local/.django
       - ./.envs/.local/.postgres
     ports:
-      - "8000:8000"
+      - '8000:8000'
     command: /start
 
   postgres:
@@ -48,8 +49,14 @@ services:
       - ./config:/app/config:z
       - ./django_lab:/app/django_lab:z
     ports:
-      - "9000:9000"
+      - '9000:9000'
     command: /start-docs
+
+  mailhog:
+    image: mailhog/mailhog:v1.0.1
+    container_name: django_lab_local_mailhog
+    ports:
+      - '8025:8025'
 
   redis:
     image: redis:6
@@ -62,6 +69,7 @@ services:
     depends_on:
       - redis
       - postgres
+      - mailhog
     ports: []
     command: /start-celeryworker
 
@@ -72,6 +80,7 @@ services:
     depends_on:
       - redis
       - postgres
+      - mailhog
     ports: []
     command: /start-celerybeat
 
@@ -80,5 +89,5 @@ services:
     image: django_lab_local_flower
     container_name: django_lab_local_flower
     ports:
-      - "5555:5555"
+      - '5555:5555'
     command: /start-flower
