--- a/local.yml
+++ b/local.yml
@@ -59,7 +59,7 @@ services:
       - '8025:8025'
 
   redis:
-    image: redis:7
+    image: redis:7-alpine
     container_name: django_lab_local_redis
 
   celeryworker:
