--- a/production.yml
+++ b/production.yml
@@ -45,7 +45,7 @@ services:
       - '0.0.0.0:5555:5555'
 
   redis:
-    image: redis:7
+    image: redis:7-alpine
 
   celeryworker:
     <<: *django
