--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -14,6 +14,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   build-essential \
   # psycopg2 dependencies
   libpq-dev \
+  # GeoDjango dependencies
+  # https://realpython.com/location-based-app-with-geodjango-tutorial/
+  gdal-bin libgdal-dev python3-gdal binutils libproj-dev \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
@@ -44,6 +47,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   libpq-dev \
   # Translations dependencies
   gettext \
+  # GeoDjango dependencies
+  # https://realpython.com/location-based-app-with-geodjango-tutorial/
+  gdal-bin libgdal-dev python3-gdal binutils libproj-dev \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
